package com.aamagon.regucars.ui.theme

import androidx.compose.ui.unit.dp
import androidx.compose.ui.unit.sp

object Dimensions{
    val default = 16.dp
    val toolbarIconSize = 100.dp

    val titleDialog = 25.sp
    val contentDialog = 20.sp

    val filterTitle = 20.sp
    val thumbSize = 24.dp

    val cardHeight = 100.dp
    val cardModel = 18.sp
    val cardPrice = 18.sp

    val labelTf = 15.sp
}